# release-gate_claude

./: COMPLETE.md  CONTRIBUTING.md  EXTENDED_README.md  FINAL_COPY_LIST.md  FINAL_ORGANIZATION.md  FOLDER_README_GUIDE.md  LICENSE  QUICKSTART.md  README.md  REORGANIZATION_GUIDE.md  REPO_STRUCTURE.md  cli.py  cli_bkp.py  diagnostic.py  example-config.yaml  governance-complete.yaml  governance-failing.yaml  governance-simple.yaml  governance-working.yaml  my-test-report.json  pricing.json  pyproject.toml  readiness_report.json  release-gate.yaml  vercel.json
.github/workflows/: tests.yml
checks/: action_budget.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  README.md
examples/: README.md  invalid_requests.jsonl  valid_requests.jsonl
pricing/: dynamic_pricing.py
public/: index.html
release_gate/: cli.py  init.py
release_gate/checks/: __init__.py  identity_boundary.py
release_gate/pricing/: __init__.py  budget_simulator.py
tests/: README.md  test_budget_simulator.py  test_release_gate.py
